--- a/quiz.css
+++ b/quiz.css
@@ -69,7 +69,7 @@ h1, h2 {
 }
 
 .phonetic-btn:hover {
-    background-color: #218838; /* 懸停時深綠色 */
+    background-color: #ffffff; /* 懸停時深綠色 */
 }
 
 /* Letter input boxes for sentence word quiz */
@@ -317,7 +317,7 @@ h1, h2 {
     border: none;
     color: #007bff;
     cursor: pointer;
-    font-size: 18px;
+    font-size: 21px;
     padding: 0;
 }
 
