--- a/index.css
+++ b/index.css
@@ -176,11 +176,14 @@ transform: scale(1.05);
 #meaningContainer {
 max-height: 400px;
 overflow-y: auto;
-padding: 15px;
+padding-top: 30px;
+padding-left: 15px;
+padding-right: 15px;
+padding-bottom: 30px;
 border: 1px solid #ddd;
 background: #e9eef1;
 border-radius: 15px;
-font-size: 20px;
+font-size: 25px;
 margin-left: 8px;
 margin-right: 8px;
 }
