--- a/sentence.css
+++ b/sentence.css
@@ -436,11 +436,12 @@ h1 {
     appearance: none;
     background-color: white;
     transition: all 0.2s ease-in-out;
+    flex-shrink: 0;
 }
 
 .important-checkbox:checked {
-    background-color: #bd1438;
-    border-color: #ff002b;
+    background-color: #ffc107;
+    border-color: #e0a800;
 }
 
 /* 媒體查詢 */
